--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1"
+    "react": "^16.8.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
