--- a/package.json
+++ b/package.json
@@ -9,15 +9,10 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "husky": "^1.3.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "babel usePromise.js --out-file index.js"
-    }
+    "@babel/preset-env": "^7.3.1"
   },
   "scripts": {
+    "prepublish": "babel usePromise.js --out-file index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
